Fix horizontal scroll issue in casestudy page on mobile browser

--- a/src/components/pages/CaseStudy/SearchCaseStudy/SearchCaseStudy.scss
+++ b/src/components/pages/CaseStudy/SearchCaseStudy/SearchCaseStudy.scss
@@ -70,7 +70,7 @@
       }
 
       .faq-saphere-box.faq-saphere2 {
-         left: 85%;
+         right: -5%;
          top: -5%;
       }
    }
